# atlas

./: .containerignore  .dockerignore  .env.example  .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  compose.yaml  flake.nix  justfile  package.json  pnpm-lock.yaml  process-compose.no-db.yaml  process-compose.yaml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: gate.rs  lib.rs  main.rs
apps/desktop/src-tauri/tests/: gate_controller.rs  gate_evidence.rs  gate_secret_service.rs  gate_tls.rs  host_contract.rs  transport_factory.rs
crates/atlas_api/: Cargo.toml
crates/atlas_api/src/: lib.rs  pagination.rs  problem.rs
crates/atlas_api/src/dtos/: audit.rs  automation_rules.rs  boards_tasks.rs  documents.rs  folders.rs  groups.rs  integrations.rs  lifecycle.rs  mod.rs  property_definitions.rs  saved_searches.rs  search.rs  semantic_search.rs  status_templates.rs  tags.rs  task_views.rs  webhooks.rs
crates/atlas_cli/: Cargo.toml
crates/atlas_cli/src/: cli.rs  config.rs  ctx.rs  error.rs  main.rs  output.rs  projections.rs
crates/atlas_cli/src/commands/: activity.rs  api_keys.rs  audit.rs  boards.rs  bulk.rs  columns.rs  common.rs  completions.rs  config.rs  docs.rs  folders.rs  grants.rs  groups.rs  members.rs  mod.rs  projects.rs  property_definitions.rs  saved_searches.rs  search.rs  status_templates.rs  tags.rs  task_views.rs  tasks.rs  trash.rs  users.rs  workspaces.rs
crates/atlas_client/: Cargo.toml
crates/atlas_client/src/: helpers.rs  lib.rs
crates/atlas_domain/: Cargo.toml
crates/atlas_domain/src/: actor.rs  error.rs  frontmatter.rs  ids.rs  lib.rs  permissions.rs  position.rs  revision.rs  search.rs  semantic_search.rs  slug.rs  wikilink.rs
crates/atlas_domain/src/entities/: boards_tasks.rs  comments.rs  documents.rs  events.rs  groups.rs  identity.rs  lifecycle.rs  mod.rs  permissions.rs  saved_searches.rs  security_audit.rs  status_templates.rs  tags.rs  task_views.rs  workspace_core.rs
crates/atlas_domain/src/ports/: attachment_store.rs  boards_tasks.rs  comments.rs  documents.rs  group_repo.rs  identity.rs  lifecycle.rs  mod.rs  permission_grant_repo.rs  saved_searches.rs  search.rs  security_audit.rs  status_templates.rs  tags.rs  task_views.rs  workspace_core.rs
crates/atlas_domain/tests/: comment_drafts.rs  permissions.rs  semantic_search.rs
crates/atlas_mcp/: Cargo.toml
crates/atlas_mcp/src/: lib.rs  main.rs  response.rs
crates/atlas_server/: Cargo.toml
crates/atlas_server/src/: config.rs  embeddings.rs  error.rs  lib.rs  main.rs  semantic_indexer.rs  state.rs  webhook_url.rs
crates/atlas_server/src/auth/: csrf.rs  middleware.rs  mod.rs  password.rs  tokens.rs
crates/atlas_server/src/authz/: authorized.rs  batch_authorization.rs  batch_authorization_db_tests.rs  batch_authorization_tests.rs  extractors.rs  mod.rs
crates/atlas_server/src/crypto/: mod.rs  webhook_crypto.rs
crates/atlas_server/src/dispatcher/: mod.rs
crates/atlas_server/src/live/: mod.rs
crates/atlas_server/src/middleware/: mod.rs  problem_stamp.rs  rate_limit.rs
crates/atlas_server/src/persistence/: bootstrap.rs  live_ancestors.rs  mod.rs
crates/atlas_server/src/presence/: mod.rs  tasks.rs
crates/atlas_server/src/routes/: activate.rs  api_keys.rs  audit.rs  auth.rs  (+32 more)
crates/atlas_server/tests/: api_401_sweep.rs  api_account_status.rs  api_activation.rs  api_api_keys.rs  api_audit_read.rs  api_audit_writes.rs  api_auth.rs  api_automation_rules.rs  api_boards_tasks.rs  api_capability_sweep.rs  api_comment_attachments.rs  api_comments.rs  api_copy.rs  api_create_workspace.rs  api_csrf_ratelimit.rs  api_document_comments.rs  api_documents.rs  api_events_stream.rs  api_extractor.rs  api_folders.rs  api_global_admin_bypass.rs  api_grants.rs  api_group_grants.rs  api_groups.rs  api_health.rs  api_integration_configs.rs  api_key_grant_access.rs  api_key_scope_gate.rs  api_key_scope_migration.rs  api_members.rs  api_permissions.rs  api_presence.rs  api_presence_agent.rs  api_presence_document.rs  api_projects.rs  api_property_definitions.rs  api_rate_limit.rs  api_saved_searches.rs  api_search.rs  api_search_pagination.rs  (+65 more)
crates/atlas_test_db/: Cargo.toml
crates/atlas_test_db/src/: lib.rs
crates/atlas_test_harness/: Cargo.toml
crates/atlas_test_harness/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260612_000001_identity.rs  m20260612_000002_workspace_core.rs  m20260612_000003_documents.rs  m20260612_000004_boards_tasks.rs  m20260612_000005_permissions.rs  m20260613_000006_document_slug.rs  m20260613_000007_boards_tasks_e05.rs  m20260614_000008_task_reference_kind_target_check.rs  m20260614_000009_attachment_task_fk.rs  m20260618_000010_user_email.rs  m20260618_000011_user_ui_state.rs  m20260619_000012_task_parent.rs  m20260620_000013_tags.rs  m20260620_000014_saved_searches.rs  m20260621_000015_task_views.rs  m20260621_000016_column_color.rs  m20260621_000017_tag_color.rs  m20260622_000018_status_templates.rs  m20260622_000019_user_system_admin.rs  m20260623_000020_apikey_identity.rs  m20260623_000021_user_activation.rs  m20260623_000022_workspace_activity_index.rs  m20260624_000023_security_audit_log.rs  m20260624_000024_groups.rs  m20260626_000025_apikey_global.rs  m20260628_000026_task_reference_docs_kind.rs  m20260628_000027_task_activity_document_mentioned.rs  m20260630_000028_events_outbox.rs  m20260630_000029_webhook_subscriptions.rs  m20260630_000030_webhook_delivery_log.rs  m20260630_000031_integration_configs.rs  m20260630_000032_automation_rules.rs  m20260630_000033_workspace_soft_delete.rs  m20260702_000034_comments.rs  m20260702_000035_automation_add_comment_action.rs  m20260702_000036_events_outbox_notify.rs  m20260702_000037_prune_description_edit_activity.rs  m20260705_000038_apikey_scopes.rs  m20260708_000039_search_embeddings.rs  (+4 more)
crates/migration/tests/: semantic_search_schema.rs
(+585 files in other folders)
