[workspace]
members = [
    "crates/atlas_domain",
    "crates/atlas_api",
    "crates/atlas_client",
    "crates/atlas_server",
    "crates/atlas_cli",
    "crates/atlas_mcp",
    "crates/migration",
    "crates/atlas_test_db",
    "crates/atlas_test_harness",
    "apps/desktop/src-tauri",
]
default-members = [
    "crates/atlas_domain",
    "crates/atlas_api",
    "crates/atlas_client",
    "crates/atlas_server",
    "crates/atlas_cli",
    "crates/atlas_mcp",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
authors = ["Ignacio Perez <ignacio@feuer.me>"]
repository = "https://github.com/0xErwin1/atlas"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates (path deps)
atlas_domain = { path = "crates/atlas_domain" }
atlas_api    = { path = "crates/atlas_api" }
atlas_client = { path = "crates/atlas_client" }
migration    = { path = "crates/migration" }

# Domain layer (pure)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
uuid       = { version = "1", features = ["v4", "v7", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }

# Server layer
axum       = { version = "0.8", features = ["multipart"] }
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sea-orm    = { version = "2.0.0-rc.40", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc.40", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
# Direct sqlx handle for Postgres LISTEN/NOTIFY (PgListener). sea-orm's
# `sqlx-postgres` feature pulls the sqlx-postgres driver crate but does not
# enable the sqlx facade's `postgres` feature, so `sqlx::postgres::PgListener`
# is only reachable via a direct dependency. Version and runtime/tls features
# match sea-orm's bundled sqlx 0.9 (tokio + rustls) so a single sqlx instance is
# shared and `DatabaseConnection::get_postgres_connection_pool()` stays type-compatible.
sqlx       = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls"] }
utoipa     = { version = "5", features = ["axum_extras"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors", "set-header"] }
utoipa-axum   = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
axum-extra    = { version = "0.10", features = ["cookie"] }
tower_governor = "0.8"
governor      = "0.10"

# Persistence deps
argon2            = "0.5"
bytes             = "1"
sha2              = "0.10"
object_store      = { version = "0.12", features = ["aws"] }
infer             = "0.19"
rand              = "0.8"
fractional_index  = "2.0"
diffy-imara       = "0.3"
base64            = "0.22"
time              = "0.3"

# Client layer
reqwest = { version = "0.13", default-features = false, features = ["http2", "json", "rustls", "stream"] }

# Cryptography
hmac    = { version = "0.12", features = ["std"] }
aes-gcm = "0.10"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
toml = "0.8"
comfy-table = "7"
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
zeroize = "1"

# MCP — pinned exact version confirmed at scaffold time
rmcp = { version = "=1.7.0", features = ["server", "transport-io", "macros", "transport-streamable-http-server"] }

# HTTP plumbing for MCP request-parts access in tool handlers
http = "1"

# Shared infra
tempfile           = "3"
url                = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow             = "1"
async-trait        = "0.1"
schemars           = "0.8"
futures            = "0.3"

# Test harness only (crates/atlas_test_harness). Pulls in ~210 extra
# transitive crates (bollard, hyper, tonic, rustls), so it stays a normal
# dependency of that one crate rather than a dev-dependency anywhere else.
testcontainers         = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

[workspace.lints.rust]
unsafe_code     = "forbid"
unused_must_use = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
unwrap_in_result = "deny"
todo             = "warn"
unimplemented    = "warn"
dbg_macro        = "deny"
indexing_slicing = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
