[package]
name = "atlas_api"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
base64 = "0.22"
utoipa = { version = "5", optional = true }

[features]
openapi = ["dep:utoipa"]

[lints]
workspace = true
