[package]
name = "atlas_cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas_client.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true

[lints]
workspace = true
