[package]
name = "atlas_cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas_api.workspace = true
atlas_client.workspace = true
atlas_domain.workspace = true
sha2.workspace = true
reqwest.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tempfile.workspace = true
toml = { workspace = true }
comfy-table = { workspace = true }
clap_complete = { workspace = true }
keyring = { workspace = true }

[lints]
workspace = true
