[package]
name = "atlas_client"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
atlas_domain.workspace = true
atlas_api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
