[package]
name = "atlas_domain"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
diffy-imara.workspace = true
fractional_index.workspace = true
async-trait.workspace = true
bytes.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
