[package]
name = "atlas_mcp"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atlas_mcp"
path = "src/main.rs"

[dependencies]
atlas_api.workspace = true
atlas_client.workspace = true
atlas_domain.workspace = true
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars = "1"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
axum.workspace = true
clap.workspace = true
http.workspace = true
reqwest.workspace = true
tower.workspace = true

[lints]
workspace = true
