[package]
name = "atlas_server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atlas_server"
path = "src/main.rs"

[dependencies]
atlas_domain.workspace = true
axum.workspace = true
tokio.workspace = true
sea-orm.workspace = true
migration.workspace = true
sea-orm-migration.workspace = true
utoipa.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
argon2.workspace = true
sha2.workspace = true
rand.workspace = true
fractional_index.workspace = true
diffy-imara.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tower.workspace = true
tokio = { workspace = true }
sea-orm.workspace = true
sea-orm-migration.workspace = true
migration.workspace = true
uuid.workspace = true

[lints]
workspace = true
