[package]
name = "atlas_server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atlas_server"
path = "src/main.rs"

[[bin]]
name = "seed_dev"
path = "src/bin/seed_dev.rs"

[dependencies]
atlas_domain.workspace = true
atlas_api = { workspace = true, features = ["openapi"] }
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
sea-orm.workspace = true
migration.workspace = true
sea-orm-migration.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
argon2.workspace = true
sha2.workspace = true
rand.workspace = true
fractional_index.workspace = true
diffy-imara.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tower.workspace = true
tokio = { workspace = true }
sea-orm.workspace = true
sea-orm-migration.workspace = true
migration.workspace = true
uuid.workspace = true
futures.workspace = true

[lints]
workspace = true
