[package]
name = "atlas_test_harness"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atlas-test-harness"
path = "src/main.rs"

[dependencies]
testcontainers = { workspace = true, features = ["blocking", "watchdog"] }
testcontainers-modules = { workspace = true, features = ["blocking"] }

[lints]
workspace = true
